[gd_scene load_steps=2 format=3 uid="uid://duumve1jqgg15"]

[ext_resource type="Script" path="res://components/scripts/lightblue_enemy_container.gd" id="1_6g6jm"]

[node name="Enemy_container" type="Node2D"]
process_mode = 1
y_sort_enabled = true
script = ExtResource("1_6g6jm")

[node name="Round_cooldown" type="Timer" parent="."]
wait_time = 4.0
one_shot = true

[node name="Spawnpoint" type="Marker2D" parent="."]
position = Vector2(534, -109)

[node name="Spawnpoint2" type="Marker2D" parent="."]
position = Vector2(1617, -105)

[node name="Spawnpoint3" type="Marker2D" parent="."]
position = Vector2(729, 937)

[node name="Spawnpoint4" type="Marker2D" parent="."]
position = Vector2(40, 1051)

[node name="Spawnpoint5" type="Marker2D" parent="."]
position = Vector2(1794, 1008)

[node name="Spawnpoint6" type="Marker2D" parent="."]
position = Vector2(629, 625)

[node name="Spawnpoint7" type="Marker2D" parent="."]
position = Vector2(148, 596)

[node name="Spawnpoint8" type="Marker2D" parent="."]
position = Vector2(1234, 1097)

[node name="Spawnpoint9" type="Marker2D" parent="."]
position = Vector2(1149, 243)

[node name="Spawnpoint10" type="Marker2D" parent="."]
position = Vector2(1777, 588)

[node name="Boss_Spawner" type="Marker2D" parent="."]
position = Vector2(939, 518)

[connection signal="timeout" from="Round_cooldown" to="." method="_on_round_cooldown_timeout"]
